# coder-ai

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  setup.py  test_output
src/coderai/: __init__.py  functions.py  main.py
src/paij/: __init__.py  feedback.py  functions.py  main.py
