[project]
name = "coder-ai"
version = "1.0.4"
authors = [
    { name = "Galaksiya", email = "info@galaksiya.com" }
]
description = "A Python library for generating Java methods from unit tests using OpenAI's GPT model."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/GalaksiyaIT/coder-ai"
Issues = "https://github.com/GalaksiyaIT/coder-ai/issues"